--- a/config/alt_zh_prototype.yml
+++ b/config/alt_zh_prototype.yml
@@ -1,54 +1,72 @@
 # ==============================================================================
-# CONFIG TỐI ƯU CHO OPENSUBTITLES (ZH-VI) - 500K CÂU
+# FINAL CONFIGURATION - ALT DATASET (16K) - 4GB VRAM SAFE MODE
 # ==============================================================================
 
+# 1. DATASET
 data:
-  train_data_location: data/Chinese/train
-  eval_data_location: data/Chinese/dev
+  train_data_location: data/ALT_Chinese/02_final_separate/train
+  eval_data_location: data/ALT_Chinese/02_final_separate/dev
   src_lang: .bpe.zh
   trg_lang: .bpe.vi
 
-# 1. MODEL (BASE)
-d_model: 512
-n_layers: 6
-heads: 8
-d_ff: 2048
-dropout: 0.3      # Subtitle rất nhiễu, giữ dropout 0.3 là chuẩn
+# 2. MODEL ARCHITECTURE
+# Giữ nguyên cấu trúc nhỏ (Tiny) để phù hợp lượng dữ liệu ít
+d_model: 256
+n_layers: 2
+heads: 4
+d_ff: 1024
+dropout: 0.3     # QUAN TRỌNG: Giữ 0.3 để chống học vẹt (Overfitting)
 
-# 2. TRAINING STRATEGY (TẬN DỤNG CÂU NGẮN)
-# Vì câu chỉ dài trung bình 9 token, ta có thể nhồi Batch cực lớn
-batch_size: 96    # TĂNG LÊN 96 (GPU 8GB chịu tốt vì max_len thấp)
-accum_count: 1    # Giảm accum xuống 1 vì batch 96 đã đủ lớn để học tốt rồi.
-                  # Train sẽ mượt hơn rất nhiều.
-eval_batch_size: 32
+# 3. TRAINING CONFIG (ĐÃ TỐI ƯU CHO 4GB VRAM)
+# --------------------------------------------------------------------------
+# CHIẾN THUẬT: Tích tiểu thành đại
+# - Vật lý (VRAM): Chỉ nạp 8 câu để không cháy RAM.
+# - Toán học (Logic): Tích lũy 128 lần mới cập nhật trọng số.
+# => Effective Batch Size = 8 * 128 = 1024 câu (Rất đẹp cho Transformer)
+# --------------------------------------------------------------------------
+batch_size: 8         # An toàn cho 4GB VRAM
+accum_count: 128      # Tăng từ 16 lên 128
 
-# 3. OPTIMIZER
+eval_batch_size: 8
+
+# 4. OPTIMIZER
 optimizer: Adam
 optimizer_params:
   betas: [0.9, 0.98]
   eps: !!float 1e-9
 
-lr: 0.0003        # LR chuẩn cho Batch lớn
-n_warmup_steps: 4000 
+lr: 2.0             
+# [QUAN TRỌNG] SỬA WARMUP
+# - Tổng số bước train = 200 epochs * (16000 câu / 1024 batch) ≈ 3200 bước.
+# - Warmup nên chiếm khoảng 10-15% giai đoạn đầu -> Chọn 500 bước.
+# - Nếu để 3000 như cũ, train xong 200 epoch model vẫn đang warmup -> Fail.
+n_warmup_steps: 500 
 label_smoothing: 0.1
 
-# 4. QUẢN LÝ
-epochs: 30
-printevery: 100
-save_checkpoint_epochs: 1
+# 5. QUẢN LÝ TRAIN
+epochs: 200           # Dữ liệu ít nên cần train nhiều vòng
+printevery: 50        # In log mỗi 50 steps (~ 3 epochs in 1 lần)
+
+# [SỬA] Lưu thưa ra
+save_checkpoint_epochs: 1 # Lưu mỗi 5 epochs (thay vì 1). 
+                          # Lưu nhiều quá tốn ổ cứng và rối mắt.
+
 maximum_saved_model_eval: 5
 maximum_saved_model_train: 5
-train_max_length: 40  # CHỐT HẠ: 99% data < 29 tokens. 
-                      # Để 40 là bao trọn vẹn, cắt bỏ phần rác siêu dài (nếu có).
+train_max_length: 130     # 99% câu tiếng Việt < 114 tokens, 130 là an toàn.
 
-# 5. KHÁC
-log_file_models: 'model_zh_vi_base.log'
+# [THÊM] Early Stopping
+patience: 20              # Nếu 20 epoch (sau khi gộp) mà không khá hơn thì dừng.
+
+# 6. KHÁC
+log_file_models: 'model_lo_alt_4gb.log'
 device: cuda
+lowercase: false
 
-# 6. INFERENCE
+# 7. INFERENCE
 decode_strategy: BeamSearch
 decode_strategy_kwargs:
   beam_size: 5
-  length_normalize: 1.0
-input_max_length: 40    # Khớp với train
-max_length: 40
+  length_normalize: 0.6
+input_max_length: 130
+max_length: 150
